switched to embed video link

--- a/source/partials/blocks/hero-area.htm
+++ b/source/partials/blocks/hero-area.htm
@@ -8,7 +8,7 @@ Welcome Slider
 	</video> -->
  	<div class="block">
  		<div class="video-button mb-5">
- 			<a class="popup-video" href="https://youtu.be/CdMTpTVezUI">
+ 			<a class="popup-video" href="https://www.youtube.com/embed/CdMTpTVezUI">
  				<i class="tf-ion-play"></i>
  			</a>
  		</div>
@@ -18,3 +18,4 @@ Welcome Slider
  		<a href="#services" class="btn btn-transparent smooth-scroll">Explore Us</a>
  	</div>
  </section>
+
