--- a/source/partials/blocks/hero-area.htm
+++ b/source/partials/blocks/hero-area.htm
@@ -8,7 +8,7 @@ Welcome Slider
 	</video> -->
  	<div class="block">
  		<div class="video-button mb-5">
- 			<a class="popup-video" href="https://www.youtube.com/embed/CdMTpTVezUI">
+ 			<a class="popup-video" href="https://www.youtube.com/v=CdMTpTVezUI">
  				<i class="tf-ion-play"></i>
  			</a>
  		</div>
