--- a/source/partials/blocks/navigation.htm
+++ b/source/partials/blocks/navigation.htm
@@ -8,7 +8,7 @@ Sticky Navigation
       <!-- logo -->
       <a class="navbar-brand logo" href="index.html">
         <!-- <img src="images/logo.png" alt="Website Logo" /> -->
-        <img src="images/transformer-logo.svg" />
+        <img src="images/transformer-logo.svg" class="transformer-logo"/>
       </a>
       <!-- /logo -->
 
