--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -498,6 +498,12 @@ a:hover {
   display: inline-block;
 }
 
+.transformer-logo {
+  height: 40px;
+  width: 40px;
+
+}
+
 .single-page-header {
   background-image: url("../images/about/about-header.jpg");
   background-size: cover;
