--- a/source/partials/blocks/hero-area.htm
+++ b/source/partials/blocks/hero-area.htm
@@ -2,7 +2,7 @@
 Welcome Slider
 ==================================== -->
 
- <section class="hero-area overlay" style="background-image: url('images/banner/wall-2933017_1920.jpeg');">
+ <section class="hero-area overlay" style="background-image: url('images/man.jpeg');">
  	<!-- <video autoplay muted loop class="hero-video">
 		<source src="images/banner/hero-video.mp4" type="video/mp4">
 	</video> -->
