changing brick wall image

--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -567,7 +567,7 @@ a:hover {
 }
 
 .bg-1 {
-  background-image: url("../images/backgrounds/bg-1.jpg");
+  background-image: url("../images/wall.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
