--- a/source/scss/templates/_backgrounds.scss
+++ b/source/scss/templates/_backgrounds.scss
@@ -1,5 +1,5 @@
 .bg-1 {
-    background-image: url('../images/backgrounds/bg-1.jpg');
+    background-image: url('../images/wall.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
