--- a/source/partials/blocks/about.htm
+++ b/source/partials/blocks/about.htm
@@ -23,8 +23,7 @@
 					<!-- Express About Yourself -->
 					<div class="content text-center">
 						<h3 class="ddd">We're Creative</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos
-							provident laborum eum dignissimos</p>
+						<p>We love our work, and we want to work for you. That's why our technical staff gaurantees a response within 30 minutes.</p>
 					</div>
 				</div>
 			</div>
@@ -39,8 +38,7 @@
 					<!-- Express About Yourself -->
 					<div class="content text-center">
 						<h3>We're Professional</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, nihil, libero, perspiciatis eos
-							provident laborum eum dignissimos</p>
+						<p>Well that seems boastful doesn't it? Contact us below for an explanation.</p>
 					</div>
 				</div>
 			</div>
