--- a/source/partials/blocks/about-video.htm
+++ b/source/partials/blocks/about-video.htm
@@ -7,9 +7,9 @@
 			<div class="col-lg-6">
 				<div class="content-block">
 					<h2>We’re A Digital Design Agency.</h2>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam tempora itaque, autem dolores culpa cum mollitia voluptate nesciunt voluptatibus quasi.</p>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis eveniet vel et mollitia nemo corporis autem dolores culpa cum mollitia voluptate</p>
-					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore, magnam.</p>
+					<p>Our clients trust us. That's because we never stop working for them. We continuously maintain and look for ways to improve our products.</p>
+					<p>We are serious about bringing you customers, and improving your business by means of custom application design.</p>
+					<p>We use cutting edge marketing techniques to bring you the customers you want, and fast.</p>
 					<div class="row">
 						<div class="col-md-6">
 							<div class="media">
