--- a/source/partials/blocks/about-video.htm
+++ b/source/partials/blocks/about-video.htm
@@ -18,8 +18,7 @@
 								</div>
 								<div class="media-body">
 									<h4 class="media-heading">SEO Optimized</h4>
-									<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus consectetur dolores repellendus
-										eos saepe</p>
+									<p>We use all means necessary to put you at the top of the list, and keep you there.</p>
 								</div>
 							</div>
 						</div>
@@ -30,7 +29,7 @@
 								</div>
 								<div class="media-body">
 									<h4 class="media-heading">Easy Customization</h4>
-									<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus consectetur dolores repellendus
+									<p>Don't like something? Change it. Our primary goal is your satisfaction.
 									</p>
 								</div>
 							</div>
