--- a/source/partials/blocks/service.htm
+++ b/source/partials/blocks/service.htm
@@ -20,8 +20,7 @@
 						<i class="tf-globe"></i>
 					</div>
 					<h3>WordPress Theme</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam
-						iaculis arcu at mauris dapibus consectetur.</p>
+					<p>Pick from literally 1000's of themes on wordpress. Every one will be responsive.</p>
 				</div>
 			</article>
 			<!-- End Single Service Item -->
@@ -33,8 +32,7 @@
 						<i class="tf-ion-laptop"></i>
 					</div>
 					<h3>Responsive Design</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam
-						iaculis arcu at mauris dapibus consectetur.</p>
+					<p>What do we mean when we say responsive? That means no matter what device you are using, the design looks pixel-perfect!</p>
 				</div>
 			</article>
 			<!-- End Single Service Item -->
@@ -46,8 +44,7 @@
 						<i class="tf-genius"></i>
 					</div>
 					<h3>Media &amp; Advertisement</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam
-						iaculis arcu at mauris dapibus consectetur.</p>
+					<p>We create videos to advertise your service on sites like youtube, and instagram. We also use SEM (Search Engine Marketing) to direct people to your site.</p>
 				</div>
 			</article>
 			<!-- End Single Service Item -->
@@ -59,8 +56,7 @@
 						<i class="tf-dial"></i>
 					</div>
 					<h3>Graphic Design</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam
-						iaculis arcu at mauris dapibus consectetur.</p>
+					<p>We use Adobe XD to design your logos, and mock-ups of proposal sites. Then we use those mock-ups and translate them to pixel-perfect design. Graphic design into literal graphics.</p>
 				</div>
 			</article>
 			<!-- End Single Service Item -->
@@ -72,8 +68,7 @@
 						<i class="tf-target3"></i>
 					</div>
 					<h3>Apps Development</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam
-						iaculis arcu at mauris dapibus consectetur.</p>
+					<p>Our dev team can make just about anything. Have an idea? Let's build it together. Need a solution for your business? We got you covered with performance dashboards, data visualization, and communication platforms.</p>
 				</div>
 			</article>
 			<!-- End Single Service Item -->
@@ -85,8 +80,7 @@
 						<i class="tf-lifesaver"></i>
 					</div>
 					<h3>Networking</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam
-						iaculis arcu at mauris dapibus consectetur.</p>
+					<p>Our cloud-based networking solutions are on the bleeding edge. Massive computing power, excellent speed no matter your location, scalable, and 100 percent secure.</p>
 				</div>
 			</article>
 			<!-- End Single Service Item -->
