--- a/source/partials/blocks/skills.htm
+++ b/source/partials/blocks/skills.htm
@@ -15,11 +15,9 @@
 		</div> <!-- End row -->
 		<div class="row">
 			<div class="col-md-6">
-				<h2>We’ve skilled in wide range of web and <br>
+				<h2>We’re skilled in wide range of web and <br>
 					Other digital market tools.</h2>
-				<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis magni explicabo cum aperiam recusandae
-					sunt accusamus totam. Quidem quos fugiat sapiente numquam accusamus quas hic, itaque in libero reiciendis
-					tempora!</p>
+				<p>Our team are at the highest level of their fields. Whether it's development, data analysis, web design, or app development, we do what we do best.</p>
 				<img class="img-fluid" src="images/about/company-growth.png" alt="">
 			</div>
 			<div class="col-md-6 mt-4 mt-md-0">
