--- a/source/partials/blocks/testimonial.htm
+++ b/source/partials/blocks/testimonial.htm
@@ -13,20 +13,18 @@
 
 						<!-- client photo -->
 						<div class="client-thumb">
-							<img src="images/team/client-1.jpg" class="img-fluid" alt="Meghna">
+							<img src="images/woman-review.jpeg" class="img-fluid" alt="Meghna">
 						</div>
 						<!-- /client photo -->
 
 						<!-- client info -->
 						<div class="client-info">
 							<div class="client-meta">
-								<h3>Jonathon Andrew</h3>
-								<span>Dec 26, 2018</span>
+								<h3>Shelly Francis</h3>
+								<span>Dec 26, 2020</span>
 							</div>
 							<div class="client-comment">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium minima ex, quia error, deserunt
-									voluptatibus repellendus? Incidunt eligendi aliquam repellat molestias, vel sed optio rem odit quis
-									ratione non consequuntur!</p>
+								<p>I had no idea what value my business had in the market until I hired Transformer. Since then my business has grown 10-fold. We are still growing, and I owe a ton of that to Transformer and the incredible teams working there! Wow!</p>
 							</div>
 						</div>
 						<!-- /client info -->
@@ -38,20 +36,18 @@
 
 						<!-- client photo -->
 						<div class="client-thumb">
-							<img src="images/team/client-2.jpg" class="img-fluid" alt="Meghna">
+							<img src="images/man-review.jpeg" class="img-fluid" alt="Meghna">
 						</div>
 						<!-- /client photo -->
 
 						<!-- client info -->
 						<div class="client-info">
 							<div class="client-meta">
-								<h3>Jonathon Andrew</h3>
-								<span>Dec 26, 2018</span>
+								<h3>William Burgess</h3>
+								<span>Aug 06, 2019</span>
 							</div>
 							<div class="client-comment">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel reiciendis qui in laborum obcaecati
-									expedita blanditiis animi placeat, nemo exercitationem porro. Consequuntur qui commodi minima
-									molestiae, dolores reprehenderit nemo inventore.</p>
+								<p>I hired Transformer when I thought my business wasn't going to last. My runway was running out, and they were my last chance. Here we are a year later and I've doubled my staff in order to accomodate all the orders! Can't thank you enough Transformer!</p>
 							</div>
 						</div>
 						<!-- /client info -->
