--- a/source/partials/blocks/testimonial.htm
+++ b/source/partials/blocks/testimonial.htm
@@ -59,20 +59,18 @@
 
 						<!-- client photo -->
 						<div class="client-thumb">
-							<img src="images/team/client-1.jpg" class="img-fluid" alt="Meghna">
+							<img src="images/woman-review-2.jpeg" class="img-fluid" alt="Meghna">
 						</div>
 						<!-- /client photo -->
 
 						<!-- client info -->
 						<div class="client-info">
 							<div class="client-meta">
-								<h3>Jonathon Andrew</h3>
-								<span>Dec 26, 2018</span>
+								<h3>Karen Fisher</h3>
+								<span>May 20, 2021</span>
 							</div>
 							<div class="client-comment">
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia dolorem non delectus neque,
-									voluptatem accusamus atque expedita doloribus minima iusto nemo, numquam eos quia maiores harum!
-									Quaerat illum beatae necessitatibus!</p>
+								<p>My law firm was in need of communication and data analysis solutions. Transformer built us a bespoke application that works on all platfoerms. It's increased our efficency, and allowed us to take on more work! We will continue to work with them for a very long time!</p>
 							</div>
 						</div>
 						<!-- /client info -->
