--- a/source/partials/blocks/contact.htm
+++ b/source/partials/blocks/contact.htm
@@ -38,14 +38,14 @@
 
 			<!-- Contact Form -->
 			<div class="contact-form col-lg-6 mt-4 mt-lg-0 wow fadeInUp" data-wow-duration="500ms" data-wow-delay="300ms">
-				<form id="contact-form" method="post" action="sendmail.php" role="form">
+				<form id="contact-form" method="post" action="http://formspree.io/matthewgdwyer@email.com" role="form">
 
 					<div class="form-group">
 						<input type="text" placeholder="Your Name" class="form-control" name="name" id="name">
 					</div>
 
 					<div class="form-group">
-						<input type="email" placeholder="Your Email" class="form-control" name="email" id="email">
+						<input type="email" placeholder="Your Email" class="form-control" name="replyto" id="email">
 					</div>
 
 					<div class="form-group">
@@ -57,7 +57,7 @@
 					</div>
 
 					<div id="cf-submit">
-						<input type="submit" id="contact-submit" class="btn btn-transparent" value="Submit">
+						<input type="submit" id="contact-submit" class="btn btn-transparent" value="Send">
 					</div>
 
 				</form>
