--- a/source/partials/blocks/contact.htm
+++ b/source/partials/blocks/contact.htm
@@ -70,7 +70,7 @@
 	<!-- Google Map -->
 	<div class="google-map">
 		<!-- Google Map -->
-		<div id="map_canvas" data-latitude="51.507351" data-longitude="-0.127758"></div>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2688.5662233165835!2d-122.35698130000002!3d47.634562700000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5490151349603325%3A0x1eb04deb1991164b!2sQueen%20Anne%20Ave%20N%2C%20Seattle%2C%20WA%2C%20USA!5e0!3m2!1sen!2sth!4v1659660633713!5m2!1sen!2sth" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 	</div>
 	<!-- /Google Map -->
 
