--- a/source/partials/header.htm
+++ b/source/partials/header.htm
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   ================================================== -->
   <meta charset="utf-8">
-	<title>Meghna | Responsive Multipurpose Parallax HTML5 Template</title>
+	<title>Tranformer | Responsive Multipurpose Design Solutions</title>
 
   <!-- Mobile Specific Metas
   ================================================== -->
@@ -15,7 +15,11 @@
   <meta name="author" content="Themefisher">
   <meta name="generator" content="Themefisher Meghna Template v1.0">
   <!-- Favicon -->
-  <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
+  <!-- <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" /> -->
+	<link rel="apple-touch-icon" sizes="180x180" href="/images/logos/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/images/logos/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/images/logos/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
 
 	<!-- CSS
 		================================================== -->
