--- a/source/partials/blocks/about.htm
+++ b/source/partials/blocks/about.htm
@@ -53,7 +53,7 @@
 					<!-- Express About Yourself -->
 					<div class="content text-center">
 						<h3>We're Genius</h3>
-						<p>Well that seems boastful doesn't it? Contact us below for an explanation.</p>
+						<p>Well that seems boastful doesn't it? We think we deserve that title. Contact us below for an explanation.</p>
 					</div>
 				</div>
 			</div>
