--- a/source/partials/blocks/call-to-action.htm
+++ b/source/partials/blocks/call-to-action.htm
@@ -7,7 +7,8 @@ Start Call To Action
 			<div class="col-md-12 text-center">
 				<h2>Great Design & Incredible Features</h2>
 				<p>Do you want to use the most modern features for a fraction of the cost? <br> Drop us a line, and let's get started!.</p>
-				<a href="contact.html" class="btn btn-main">Start a project with us</a>
+				<!-- <input type="button" onClick="document.getElementById('contact').scrollIntoView();" /> -->
+				<a href="#contact-us" class="btn btn-main">Start a project with us</a>
 			</div>
 		</div> <!-- End row -->
 	</div> <!-- End container -->
