--- a/source/partials/blocks/footer.htm
+++ b/source/partials/blocks/footer.htm
@@ -25,7 +25,7 @@
 						width: 40px!important;"/>
 					</a>
 
-					<p class="mt-3">Designed &amp; Developed by <a href="https://www.linkedin.com/in/matthew-dwyer-5289a119b/">Matthew Dwyer Design</a>.</p>
+					<p class="mt-3">Designed &amp; Developed by <a href="https://www.matthew-dwyer.com">Matthew Dwyer Design</a>.</p>
 				</div>
 				<!-- /copyright -->
 
