--- a/source/partials/blocks/hero-area.htm
+++ b/source/partials/blocks/hero-area.htm
@@ -13,7 +13,7 @@ Welcome Slider
  			</a>
  		</div>
  		<h1>Experience the new reality</h1>
- 		<p>Custom design at near-cost pricing. 24 hour service. Built by small business owners, for small business owners.</p>
+ 		<p>Custom design at near-cost pricing. 24 hour service. Bueilt by small business owners, for small business owners.</p>
  		<a href="#services" class="btn btn-transparent smooth-scroll">Explore Us</a>
  	</div>
  </section>
