--- a/source/partials/blocks/navigation.htm
+++ b/source/partials/blocks/navigation.htm
@@ -29,9 +29,9 @@ Sticky Navigation
           <li class="nav-item">
             <a class="nav-link" href="#services">Services</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#blog">Blog</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="#contact-us">Contact</a>
           </li>
