--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -20,6 +20,10 @@
 @import "templates/single-post.scss";
 @import "templates/footer.scss";
 
+
+html {
+  scroll-behavior: smooth;
+}
 /*=================================================================
 	Twitter Feed
 ==================================================================*/
@@ -449,3 +453,4 @@ blockquote {
 .form-group:last-child input {
   margin: 0;
 }
+
