--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -498,12 +498,6 @@ a:hover {
   display: inline-block;
 }
 
-.transformer-logo {
-  height: 40px!important;
-  width: 40px!important;
-
-}
-
 .single-page-header {
   background-image: url("../images/about/about-header.jpg");
   background-size: cover;
@@ -1546,6 +1540,10 @@ a:hover {
 #scrollUp:hover {
   background-color: #57cbcc;
   border: 1px solid #57cbcc;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 /*=================================================================
